--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+.box-shadow {
+  box-shadow: 0 0 10px yellow;
+}
+.button {
+  box-shadow: 0 9px #999;
+}
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.font-roboto {
+  font-family: "Roboto Mono", sans-serif;
+}
 .blob {
   position: absolute;
   top: 0;
