--- a/src/index.css
+++ b/src/index.css
@@ -2,48 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
-.box-shadow {
+.box-shadow-yellow {
   box-shadow: 0 0 10px yellow;
+}
+.box-shadow-white {
+  box-shadow: 0 0 10px white;
 }
 .button {
   box-shadow: 0 9px #999;
 }
 .button:active {
-  background-color: #3e8e41;
   box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.buttonSp {
+  box-shadow: 0 9px #383131;
+}
+.buttonSp:active {
+  box-shadow: 0 5px rgb(202, 202, 23);
   transform: translateY(4px);
 }
 .font-roboto {
   font-family: "Roboto Mono", sans-serif;
 }
-.blob {
-  position: absolute;
-  top: 0;
-  left: 0;
-  fill: #023f92;
-  width: 50vmax;
-  z-index: -1;
-  animation: move 10s ease-in-out infinite;
-  transform-origin: 50% 50%;
+
+/* SCROLL BAR HIDDEN */
+body::-webkit-scrollbar {
+  width: 0; /* Adjust the width as needed */
 }
 
-@keyframes move {
-  0% {
-    transform: scale(1) translate(10px, -30px);
-  }
-  38% {
-    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
-  }
-  40% {
-    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
-  }
-  78% {
-    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
-  }
-  80% {
-    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
-  }
-  100% {
-    transform: scale(1) translate(10px, -30px);
-  }
+body::-webkit-scrollbar-track {
+  background-color: transparent; /* Set the track background color */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Set the thumb (scrollbar handle) color */
+}
+
+body {
+  margin: 0;
+  font-family: Dosis, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
